[build-system]
requires = [ "uv_build" ]
build-backend = "uv_build"

[project]
name = "auth"
version = "0.0.1"
authors = [ { name="Hail Team", email="hail@broadinstitute.org" } ]
description = "Authentication service"

[project.urls]
Repository = "https://github.com/hail-is/hail.git"

[tool.uv.build-backend]
module-name = "auth"
module-root = ""
namespace = true
source-include = [
  "auth/auth/templates/**",
  "auth/auth/static/**",
]
