[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "batch"
version = "0.0.2"
authors = [ { name="Hail Team", email="hail@broadinstitute.org" } ]
description = "Job manager"

[project.urls]
Repository = "https://github.com/hail-is/hail.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["batch"]
namespaces = true
