[build-system]
requires = [ "uv_build" ]
build-backend = "uv_build"

[project]
name = "ci"
version = "0.0.1"
authors = [ { name="Hail Team", email="hail@broadinstitute.org" } ]
description = "Hail CI/CD System"

[project.urls]
Repository = "https://github.com/hail-is/hail.git"

[tool.uv.build-backend]
module-name = "ci"
module-root = ""
namespace = true
source-include = [
  "ci/ci/templates/**",
  "ci/ci/static/**",
]
