[build-system]
requires = [ "uv_build" ]
build-backend = "uv_build"

[project]
name = "gear"
version = "0.0.1"
authors = [ { name="Hail Team", email="hail@broadinstitute.org" } ]
description = "Utils for building services"

[project.urls]
Repository = "https://github.com/hail-is/hail.git"

[tool.uv.build-backend]
module-name = "gear"
module-root = ""
namespace = true
source-include = [ "py.typed" ]
