[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gear"
version = "0.0.1"
authors = [ { name="Hail Team", email="hail@broadinstitute.org" } ]
description = "Utils for building services"

[project.urls]
Repository = "https://github.com/hail-is/hail.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
gear = ["py.typed"]

[tool.setuptools.packages.find]
include = ["gear"]
namespaces = true
