[build-system]
requires = [ "uv_build" ]
build-backend = "uv_build"

[project]
name = "monitoring"
version = "0.0.1"
authors = [ { name="Hail Team", email="hail@broadinstitute.org" } ]
description = "Monitoring service"

[project.urls]
Repository = "https://github.com/hail-is/hail.git"

[tool.uv.build-backend]
module-name = "monitoring"
module-root = ""
namespace = true
source-include = [
  "monitoring/monitoring/templates/**",
  "monitoring/monitoring/static/**",
]
